# nightfall_4_Starknet

./: .env  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  nightfall.toml
.github/workflows/: on-pull-request.yml
blockchain_assets/contracts/: ERC1155Mock.cairo  ERC20Mock.cairo  ERC3525Mock.cairo  ERC721Mock.cairo  Nightfall.sol  RoundRobin.sol
configuration/src/: logging.rs  settings.rs
doc/: nf_4.md
lib/: Cargo.toml
lib/src/: evm_event_decoder.rs  hex_conversion.rs  lib.rs  nightfall_events.rs  serialization.rs  starknet_event_decoder.rs  validate_keys.rs  wallets.rs
lib/src/chain_client/: evm.rs  mod.rs  polling.rs  signer.rs  starknet.rs  types.rs
lib/src/merkle_trees/: append_only.rs  mutable.rs  trees.rs
lib/src/plonk_prover/circuits/: unified_circuit.rs
lib/tests/: starknet_dummy_emitter_decode.rs  starknet_dummy_emitter_decode_roundtrip.rs  starknet_dummy_emitter_events.rs  starknet_get_events_smoke.rs
nightfall_client/: Cargo.toml  Dockerfile
nightfall_client/src/: main.rs
nightfall_client/src/drivers/: mod.rs  starknet_event_poller.rs
nightfall_client/src/drivers/blockchain/: nightfall_event_listener.rs
nightfall_client/src/services/: client_operation.rs  mod.rs  process_starknet_events.rs
nightfall_client/tests/: starknet_process_starknet_event_smoke.rs
nightfall_proposer/: Cargo.toml  Dockerfile
nightfall_proposer/src/: main.rs
nightfall_proposer/src/driven/: mock_prover.rs  rollup_prover.rs
nightfall_proposer/src/drivers/: mod.rs  starknet_event_poller.rs
nightfall_proposer/src/drivers/blockchain/: nightfall_event_listener.rs
nightfall_proposer/src/services/: mod.rs
nightfall_proposer/tests/: starknet_process_starknet_event_smoke.rs
nightfall_test/src/: main.rs  test_settings.rs
starknet_assets/: README.md
starknet_assets/cairo1_dummy_emitter/: Scarb.toml
starknet_assets/cairo1_dummy_emitter/src/: lib.cairo
starknet_assets/contracts/: DummyEmitter.cairo
starknet_assets/rust/: Cargo.toml  Dockerfile  README.md
starknet_assets/rust/src/: main.rs
starknet_assets/scripts/: deploy_and_emit.sh  emit_events_from_file.sh  export_emitter_address.sh  watch_events.sh
