[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = "0.7.16"
anyhow = "1.0.100"
thiserror = "2.0.17"
itertools = "0.14.0"
hex-literal = "1.1.0"
eyre = "0.6.12"
serde_json = "1.0.143"
reqwest = { version = "0.11.27", features = ["json", "blocking", "stream"] }
warp = "0.3.7"
async-trait = "0.1.88"
hex = "0.4.3"
dotenv = "0.15.0"
x509-parser = "0.16.0"
openssl = "0.10.72"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
alloy = { version = "1.0.23", features = ["full", "json-rpc"] }
starknet = { version = "0.17.0", optional = true }
starknet-crypto = { version = "0.8.1", optional = true }
tokio = { version = "1.45.0", features = ["full"] }
configuration = { path = "../configuration" }
nightfall_bindings = {path = "../nightfall_bindings"}
toml = "0.8.22"
ark-poly = { version = "0.4.2", features = ["parallel"] }
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
ark-bn254 = "0.4.0"
alloy-rlp = "0.3.12" 
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }
jf-relation = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-utils = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "parallel",
] }
nf-curves = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
ark-ec = { version = "0.4.2", features = ["parallel"] }
num-bigint = "0.4.6"
num = "0.4.3"
ark-ff = { version = "0.4.2", features = ["parallel"] }
mongodb = "3.2.3"
rand = "0.8"
serde = "1.0.219"
sha2 = "0.10"
sha3 = "0.10.8"
log = "0.4.27"
url = "2.5.4"
testcontainers = { version = "0.24.0", features = ["blocking"] }
futures = "0.3.31"
azure_identity = "0.21.0"
azure_security_keyvault = "0.21.0"
bincode = "1.3.3"
base64 = "0.22.1"

[features]
# Keep existing behavior by default: EVM backend is enabled.
default = ["backend_evm"]
backend_evm = []
backend_starknet = ["dep:starknet", "dep:starknet-crypto"]
[build-dependencies]
configuration = { path = "../configuration" }
tokio = { version = "1.45.0", features = ["full"] }
jf-primitives = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git" }
jf-plonk = { git = "https://git@github.com/EYBlockchain/nightfish_CE.git", features = [
    "test-srs",
] }


[dev-dependencies]
url = "2.5.4"
serde_json = "1.0.140"
