[package]
name = "nf4_starknet_emitter_tool"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sha3 = "0.10"
