[package]
name = "nf4_starknet_emitter_tool"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision", "preserve_order"] }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
thiserror = "2.0"
cairo-lang-starknet-classes = "2.17.0"
starknet-accounts = { version = "0.19.0", package = "starknet-rust-accounts" }
starknet-contract = { version = "0.19.0", package = "starknet-rust-contract" }
starknet-core = { version = "0.19.0", package = "starknet-rust-core" }
starknet-providers = { version = "0.19.0", package = "starknet-rust-providers" }
starknet-signers = { version = "0.19.0", package = "starknet-rust-signers" }
usc = { package = "universal-sierra-compiler", version = "2.8.0" }
url = "2.5"
